# UPMP

./: .gitignore  ANIMATION_PLAN.md  CMakeLists.txt  LICENSE  README.md  a.txt  plan.md  pyproject.toml  tida_paralel.cpp
UPMP/: Animation.py  __init__.py  accessDirectionFixing.py  animation_bridge.py  converter.py  idaStar.py  route_animation.py  route_cases.py  simple_scene.py  stackAreaGenerator.py
UPMP/engine_3d/objects/forklift/: fork_addon.py  forklift_make.py
UPMP/engine_3d/scene/: vtk_scene.py
src/: ida_star_cpp.cpp
tests/: deneme.py  test_import.py
