[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "UPMP"
version = "0.1.1"
description = "Parallel IDA* solver written in C++ with pybind11"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Deniz Efe Yildiz" }
]
dependencies = [
    "ortools>=9.12,<10",
]

[project.optional-dependencies]
animation = [
    "PySide6>=6.6",
    "vtk>=9.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.scikit-build]
wheel.packages = ["UPMP"]
